fixed not see scrollbar on small device

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -31,7 +31,6 @@ $gutters: (
 }
 
 .wrapper::-webkit-scrollbar-thumb {
-  border: solid 3px transparent;
   border-radius: 41px;
   background-image: linear-gradient(
       45deg,
